fix paragraph spacing

--- a/src/render/styles/style.css.scss
+++ b/src/render/styles/style.css.scss
@@ -408,7 +408,7 @@ button.tag { background-color: rgba(52,177,233,1); }
     font-family: 'Helvetica', 'Arial', sans-serif;
     color: dodgerblue; }
     
-    p:first-of-type {
+    p:first {
         margin-top: 14vw;
     }
     p.blogp:first-of-type {
